@@ -4,6 +4,7 @@ Version Next
     - Remove HardLink; obsoleted by Files.createLink()
     - Remove unnecessary parameter to VaadinApplicationListener
       NOTE: the above are backward-incompatible changes
+    - Fix bug: VaadinUtil.invokeLater() was sometimes synchronous
     - Allow container SimpleItem's to be modified from "below"
     - Added StreamWriterAction
     - Added Connectable
